--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script lang="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script src="/simple-peer/simplepeer.min.js"></script>
+    <script lang="text/javascript" src="../socket.io/socket.io.js"></script>
+    <script src="../simple-peer/simplepeer.min.js"></script>
     <style>
         .containers {
             display: grid;
